Skrevet deler av del2 ObligatoriskOppgave4.md